[package]
name = "roulette"
version = "0.1.0"
authors = ["filip.bielejec@cardinals.cc"]
edition = "2021"

[dependencies]
ink = { version = "=4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
drink = { version = "0.1.0", features = ["session"] }

test-utils = { path = "../test-utils" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
