[package]
name = "wrapped-native"
version = "1.0.0"
authors = ["filip.bielejec@cardinals.cc"]
edition = "2021"

[dependencies]
ink = { version = "=4.2.1", default-features = false, features = ["call-runtime"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

psp22-traits = { path = "../psp22-traits" , default-features = false }

sp-io = { version = "22.0.0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { version = "23.0.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22-traits/std",
]
ink-as-dependency = []