[package]
authors = ['Anonymous']
edition = '2021'
name = 'pow-primitives'
description = 'primitive types used in the multi-pow scheme in both the client and runtime'
version = '3.0.0'

[dependencies]
sp-core = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-consensus-pow = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }


[features]
default = ['std']
std = [
    'sp-core/std',
    'sp-consensus-pow/std',
]