[package]
authors = ['Anonymous']
edition = '2021'
#TODO change crate and folder name
name = 'sha3pow'
description = 'a concrete Substrate PoW algorithm that supports multiple hashing algorithms'
version = '3.0.0'

[dependencies]
parity-scale-codec = {version = "3.6.1", default-features = false, features = ["derive"] }
sha3 = { version = "0.10.1", optional = true, default-features = false }
pow-primitives = { path = "../pow-primitives" }

sc-consensus-pow = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false, optional = true }
sp-api = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-consensus-pow = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-core = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

[features]
default = ['std']
std = ['sha3', 'sc-consensus-pow']
