[package]
authors = ['Anonymous']
edition = '2021'
name = 'sha3pow'
version = '3.0.0'

[dependencies]
parity-scale-codec = '3.1.2'
sha3 = "0.10.1"
rand = { version = "0.8.5", features = ["small_rng"] }

sc-consensus = { workspace = true }
sc-consensus-pow = { workspace = true }
sc-client-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
